fix: z-index refs

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -22,6 +22,7 @@
 }
 
 :root {
+    --z-index-focus: 9999;
     --z-index-tooltip-popover: 1100;
     --z-index-dialog: 1000;
     --z-index-dropdown: 1000;
